# app/src/schema/models.gen.go
@@ -1,0 +1,48 @@
+// Package schema provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
+package schema
+
+import (
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+)
+
+// Error defines model for Error.
+type Error struct {
+	// Code Error code
+	Code int32 `json:"code"`
+
+	// Message Error message
+	Message string `json:"message"`
+}
+
+// NewUser defines model for NewUser.
+type NewUser struct {
+	DateOfBirth *openapi_types.Date `json:"dateOfBirth,omitempty"`
+	Email       openapi_types.Email `json:"email"`
+	FirstName   string              `json:"firstName"`
+	LastName    string              `json:"lastName"`
+}
+
+// User defines model for User.
+type User struct {
+	// CreateDate ユーザー情報の作成日時
+	CreateDate  *openapi_types.Date `json:"createDate,omitempty"`
+	DateOfBirth *openapi_types.Date `json:"dateOfBirth,omitempty"`
+	Email       openapi_types.Email `json:"email"`
+
+	// EmailVerified ユーザーがメール認証を完了しているかどうか。
+	// 完了していればtrue。
+	EmailVerified bool   `json:"emailVerified"`
+	FirstName     string `json:"firstName"`
+
+	// Id ユーザーのユニークID.
+	Id       int    `json:"id"`
+	LastName string `json:"lastName"`
+}
+
+// CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
+type CreateUserJSONRequestBody = NewUser
+
+// UpdateUserByIDJSONRequestBody defines body for UpdateUserByID for application/json ContentType.
+type UpdateUserByIDJSONRequestBody = NewUser
