# openapi/openapi.yaml
@@ -19,9 +19,13 @@ paths:
         name: userId
         in: path
         required: true
-        description: Id of an existing user.
+        description: データベースに存在するユーザーのID
     get:
       summary: Get User Info by User ID
+      operationId: findUserByID
+      description: idにマッチしたユーザー情報を取得する
+      tags:
+        - user
       responses:
         '200':
           description: OK
@@ -31,73 +35,34 @@ paths:
                 $ref: '#/components/schemas/User'
         '404':
           description: User Not Found
-      operationId: get-user
-      description: idにマッチしたユーザー情報を取得する
-      tags:
-        - user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     patch:
       summary: Update User Information
-      operationId: patch-users-userId
-      responses:
-        '204':
-          description: No Content
-        '404':
-          description: User Not Found
-        '409':
-          description: Email Already Taken
+      operationId: updateUserByID
       description: ユーザーの情報を更新する
+      tags:
+        - patch-user
       requestBody:
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/NewUser'
-            examples:
-              Update First Name:
-                value:
-                  firstName: Rebecca
-              Update Email:
-                value:
-                  email: rebecca@gmail.com
-              Update Last Name & Date of Birth:
-                value:
-                  lastName: Baker
-                  dateOfBirth: '1985-10-02'
-        description: Patch user properties to update.
-      tags:
-        - user
-  /users:
-    post:
-      summary: Create New User
-      operationId: post-user
       responses:
-        '200':
-          description: User Created
+        '204':
+          description: No Content
+        '404':
+          description: User Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-              examples:
-                New User Bob Fellow:
-                  value:
-                    id: 12
-                    firstName: Bob
-                    lastName: Fellow
-                    email: bob.fellow@gmail.com
-                    dateOfBirth: '1996-08-24'
-                    emailVerified: false
-                    createDate: '2020-11-18'
-            application/xml:
-              schema:
-                type: object
-                properties: {}
-            multipart/form-data:
-              schema:
-                type: object
-                properties: {}
-        '400':
-          description: Missing Required Information
-        '409':
-          description: Email Already Taken
+                $ref: '#/components/schemas/Error'
+  /users:
+    post:
+      summary: Create New User
+      operationId: createUser
       description: ユーザーを新規作成する
       tags:
         - user
@@ -106,8 +71,25 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/NewUser'
-        description: ''
-    parameters: []
+      responses:
+        '201':
+          description: User Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Missing Required Information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '409':
+          description: Email Already Taken
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     User:
@@ -124,7 +106,7 @@ components:
       properties:
         id:
           type: integer
-          description: Unique identifier for the given user.
+          description: ユーザーのユニークID.
         firstName:
           type: string
         lastName:
@@ -138,13 +120,13 @@ components:
           example: '1997-10-31'
         emailVerified:
           type: boolean
-          description: Set to true if the user's email has been verified.
+          description: |
+            ユーザーがメール認証を完了しているかどうか。
+            完了していればtrue。
         createDate:
           type: string
           format: date
-          description: The date that the user was created.
-        '':
-          type: string
+          description: ユーザー情報の作成日時
       required:
         - id
         - firstName
@@ -153,8 +135,6 @@ components:
         - emailVerified
     NewUser:
       title: NewUser
-      x-stoplight:
-        id: gq0p72kvpeib2
       type: object
       properties:
         firstName:
@@ -168,7 +148,21 @@ components:
           type: string
           format: date
       required:
-        - dateOfBirth
+        - firstName
+        - lastName
+        - email
+    Error:
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+          description: Error code
+        message:
+          type: string
+          description: Error message
   requestBodies: {}
 x-internal: false
 tags:
